--- a/templates/defaultAPP/login_detail.html
+++ b/templates/defaultAPP/login_detail.html
@@ -7,7 +7,7 @@
     {% endif %}
 {% endblock %}
 {% block login_container %}
-    {% if kind == "user" %}
+    {% if kind == "generaluser" %}
         <div class="login-kind-title">我是用户</div>
     {% else %}
         <div class="login-kind-title">我是管理员</div>
