--- a/templates/defaultAPP/background.html
+++ b/templates/defaultAPP/background.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>OA系统</title>
+    <link href="{% static 'css/login.css' %}" rel="stylesheet">
 </head>
 <body>
 <div class="main-container">
