--- a/templates/defaultAPP/login_home.html
+++ b/templates/defaultAPP/login_home.html
@@ -1,7 +1,7 @@
 {% extends "defaultAPP/background.html" %}
 {% block login_container %}
 <div class="login-kind user-login-button">
-    <a href="{% url "login" "user" %}">用户登录</a>
+    <a href="{% url "login" "generaluser" %}">用户登录</a>
 </div>
 <div class="login-kind admin-login-button">
     <a href="{% url "login" "admin" %}">管理员登录</a>
