--- a/templates/defaultAPP/register.html
+++ b/templates/defaultAPP/register.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+{% load static %}
 <head>
     <meta charset="UTF-8">
     <title>注册</title>
+     <link href="{% static 'css/register.css' %}" rel="stylesheet">
 </head>
 <body>
 <div class="register-container">
@@ -12,6 +14,11 @@
             {{form.as_p}}
             <p><input type="submit" value="注册" class="submit-button"/></p>
         </form>
-    </div>
+    <div class="return-button">
+            <a href="{% url 'login' kind %}">返回上一页</a>
+        </div>
+</div>
+
+
 </body>
 </html>
