--- a/templates/defaultAPP/login_detail.html
+++ b/templates/defaultAPP/login_detail.html
@@ -21,6 +21,6 @@
                 <a href="{% url 'register' kind%}">注册</a>
             </div>
         </form>
-        <div class="return-button"><a href="">返回上一页</a></div>
+        <div class="return-button"><a href="{% url 'back'%}">返回上一页</a></div>
     </div>
 {% endblock %}
