--- a/templates/notice/home.html
+++ b/templates/notice/home.html
@@ -1,5 +1,108 @@
 {% extends "PageNavigation/nav.html" %}
 {% block title %}HomePage{% endblock %}
 {% block content %}
+    {% load static %}
+    <link href="{% static 'css/list.css' %}" rel="stylesheet">
+    <div class="main-container">
+        <div class="main-bar">
+            <form class="search-form" method="post">
+                {% csrf_token %}
+                <input class="input" id="search-key" type="text" name="search" {% if search_key != None %}value="{{ search_key }}" {% endif %}/>
+                <input class="button" type="submit" value="搜索公告" />
+            </form>
 
+            {% if view_kind != "select"%}
+                <input class="button right-button" type="button" value="增加公告"  onclick='window.open("{% url 'view_course' 'select' %}")' />
+            {% endif %}
+            {% if view_kind != "withdraw"%}
+                <input class="button right-button" type="button" value="删除公告"  onclick='window.open("{% url 'view_course' 'withdraw' %}")' />
+            {% endif %}
+            {% if view_kind != "is_end"%}
+                <input class="button right-button" type="button" value="查看已下架公告"  onclick='window.open("{% url 'view_course' 'is_end' %}")' />
+            {% endif %}
+            {% if view_kind != "current"%}
+                <input class="button right-button" type="button" value="查看当前公告板"  onclick='window.open("{% url 'view_course' 'current' %}")' />
+            {% endif %}
+        </div>
+        <h3>{% if view_kind == "select"%}
+                增加公告
+            {% elif view_kind == "withdraw"%}
+                删除公告
+            {% elif  view_kind == "is_end"%}
+                查看已下架公告
+            {% elif view_kind == "current"%}
+                查看当前公告板
+            {% endif %}</h3>
+        <table class="item-list course-list">
+            <thead>
+                <tr>
+                    <th class="course-no">公告编号</th>
+                    <th class="course-name">名称</th>
+
+                    {% if view_kind == "is_end" %}
+                        <th class="course-year-semester">时间</th>
+                    {% else %}
+
+
+                    {% endif %}
+
+                    {% if view_kind == "is_end" %}
+
+                        <th class="course-operation student-course">操作</th>
+                    {% else %}
+                        <th class="course-schedule">时间</th>
+                        <th class="course-operation student-course">操作</th>
+                    {% endif %}
+                </tr>
+            </thead>
+            <tbody>
+            {% if view_kind == "is_end" %}
+                {# end course show student course #}
+                {% for sc in course_list %}
+                <tr id="course-id-{{ sc.course.id }}">
+                    <td class="course-no">{{ sc.course.id }}</td>
+                    <td class="course-name">{{ sc.course.name }}</td>
+                    <td class="course-year-semester">{{ sc.course.year }}</td>
+                    {% if sc.rating == None %}
+
+                        <td class="course-operation student-course">
+                        <input class="button" type="button" value="查看详情" onclick='location.href="{% url 'sview_detail' sc.id%}"' />
+                        <input class="button" type="button" value="评教"
+                               onclick='window.open("{% url 'evaluate' sc.id %}")' />
+                        </td>
+                    {% else %}
+
+                        <td class="course-operation student-course">
+                        <input class="button" type="button" value="查看详情" onclick='location.href="{% url 'sview_detail' sc.id%}"' />
+                        </td>
+                    {% endif %}
+                </tr>
+                {% endfor %}
+            {% else %}
+                {% for course in course_list %}
+                <tr id="course-id-{{ course.id }}">
+                    <td class="course-no">{{ course.id }}</td>
+                    <td class="course-name">{{ course.name }}</td>
+                    <td class="course-year">{{ course.year }}</td>
+
+                        <td class="course-operation student-course">
+                        {% if view_kind == "select"%}
+                            <input class="button" type="button" value="增加公告"
+                                   onclick='window.open("{% url 'operate_course' course.id 'select' %}")' />
+                        {% endif %}
+                        {% if view_kind == "withdraw"%}
+                            <input class="button" type="button" value="删除公告"
+                                   onclick='window.open("{% url 'operate_course' course.id 'withdraw' %}")' />
+                        {% endif %}
+                        {% if view_kind == "current"%}
+                            -
+                        {% endif %}
+                        </td>
+                </tr>
+                {% endfor %}
+            {% endif %}
+            </tbody>
+
+        </table>
+    </div>
 {% endblock %}
