--- a/templates/PageNavigation/nav.html
+++ b/templates/PageNavigation/nav.html
@@ -2,39 +2,221 @@
 <html lang="en">
 {% load static %}
 <head>
-    <meta charset="UTF-8">
-    <title>{% block title %}{% endblock %}</title>
-<link href="{% static 'css/nav.css' %}" rel="stylesheet">
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+  <title>ZSTU</title>
+  <meta content="" name="description">
+  <meta content="" name="keywords">
+
+
+  <!-- Favicons -->
+  <link href="{% static 'assets/img/favicon.png' %}" rel="icon">
+  <link href="{% static 'assets/img/apple-touch-icon.png' %}" rel="apple-touch-icon">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+
+  <!-- Vendor CSS Files -->
+  <link href="{% static 'assets/vendor/animate.css/animate.min.css' %}" rel="stylesheet">
+  <link href="{% static 'assets/vendor/aos/aos.css' %}" rel="stylesheet">
+  <link href="{% static 'assets/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+  <link href="{% static 'assets/vendor/bootstrap-icons/bootstrap-icons.css' %}" rel="stylesheet">
+  <link href="{% static 'assets/vendor/boxicons/css/boxicons.min.css' %}" rel="stylesheet">
+  <link href="{% static 'assets/vendor/remixicon/remixicon.css' %}" rel="stylesheet">
+  <link href="{% static 'assets/vendor/swiper/swiper-bundle.min.css' %}" rel="stylesheet">
+
+  <!-- Template Main CSS File -->
+  <link href="{% static 'assets/css/indexstyle.css' %}" rel="stylesheet">
+
+  <!-- =======================================================
+  * Template Name: Mentor - v4.3.0
+  * Template URL: https://bootstrapmade.com/mentor-free-education-bootstrap-theme/
+  * Author: BootstrapMade.com
+  * License: https://bootstrapmade.com/license/
+  ======================================================== -->
 </head>
+
 <body>
-<div class="nav">
-    <div class="nav-title">
+
+  <!-- ======= Header ======= -->
+  <header id="header" class="fixed-top">
+    <div class="container d-flex align-items-center">
+
+      <h1 class="logo me-auto"><a href="index.html">ZSTU</a></h1>
+      <!-- Uncomment below if you prefer to use an image logo -->
+      <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+
+      <nav id="navbar" class="navbar order-last order-lg-0">
+        <ul>
         <a href="{% url 'PageNavigation' kind=info.kind %}">
-        <p class="main-title">OA系统</p>
-        <p class="sub-title">
+        OA系统
             {% if info.kind == "admin" %}
                 管理员端
             {% elif info.kind == "generaluser" %}
                 用户端
-            {% endif %}</p>
+            {% endif %}
         </a>
-    </div>
-    <div class="log-out">
-        <a href="{% url "logout" %}">退出</a>
-    </div>
-    <div class="name-logo">
-        <div class="user-name">
-            <a href="{% url 'update' info.kind %}">
+          <li><a class="active" href="index.html">Home</a></li>
+          <li><a href="">财务</a></li>
+          <li><a href="">办事</a></li>
+          <li><a href="">公告</a></li>
+          <li><a href="{% url "logout" %}">退出</a></li>
+          <li><a href="{% url 'update' info.kind %}">
                 {{ info.name }}
-            </a>
-        </div>
+              </a>
+          </li>
+        </ul>
+      </nav><!-- .navbar -->
     </div>
-</div>
+  </header><!-- End Header -->
 
-<div class="main-content">
-    {% block content %}{% endblock %}
-</div>
+  <!-- ======= Hero Section ======= -->
+  <section id="hero" class="d-flex justify-content-center align-items-center">
+    <div class="container position-relative" data-aos="zoom-in" data-aos-delay="100">
+      
+      
+    </div>
+  </section><!-- End Hero -->
+  <!-- ======= Counts Section ======= -->
+  <section id="counts" class="counts section-bg">
+    <div class="container">
+    </div>
+  </section><!-- End Counts Section -->
+  <!-- ======= Features Section ======= -->
+  <section id="features" class="features">
+    <div class="container" data-aos="fade-up">
+  
+      <div class="row" data-aos="zoom-in" data-aos-delay="100">
+        
+        
+        <div class="col-lg-3 col-md-4 mt-4">
+          <div class="icon-box">
+            <i class="ri-database-2-line" style="color: #47aeff;"></i>
+            <h1><a href="">财务</a></h1>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 mt-4">
+          <div class="icon-box">
+            <i class="ri-gradienter-line" style="color: #ffa76e;"></i>
+            <h1><a href="">办事</a></h1>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 mt-4">
+          <div class="icon-box">
+            <i class="ri-file-list-3-line" style="color: #11dbcf;"></i>
+            <h1><a href="">公告</a></h1>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 mt-4">
+          <div class="icon-box">
+            <i class="ri-price-tag-2-line" style="color: #ffaaff;"></i>
+            <h1><a href="">其他</a></h1>
+          </div>
+        </div>
+      
+       
+        
+        
+      </div>
+  
+    </div>
+  </section><!-- End Features Section -->
+  <!-- ======= Counts Section ======= -->
+  <section id="counts" class="counts section-bg">
+    <div class="container">
+    </div>
+  </section><!-- End Counts Section -->
+  <main id="main">
+ <!-- ======= Why Us Section ======= -->
+    <section id="why-us" class="why-us">
+      <div class="container" data-aos="fade-up">
 
+        <div class="row">
+          <div class="col-lg-4 d-flex align-items-stretch">
+            <div class="content">
+              <h3>公告通知</h3>
+			  <h4>最新公告</h4>
+              <h5><a href="index.html">
+                暑假社会实践专题报道（四）：开展文明宣讲、弘扬传统文化、帮扶弱势群体——我校学子积极开展“新时代文明实践志愿服务”实践活动
+              </a></h5>
+              <div class="text-center">
+                <a href="index.html" class="more-btn">更多 <i class="bx bx-chevron-right"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-8 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+            <div class="icon-boxes d-flex flex-column justify-content-center">
+              <div class="row">
+                <div class="col-xl-4 d-flex align-items-stretch">
+                  <div class="icon-box mt-4 mt-xl-0">
+                    <i class="bx bx-receipt"></i>
+                    <h4><a href="index.html">关于“一种两段式防水透气袖子”专利权转让的公示</a></h4>
+                    <p>2021-07-22</p>
+                  </div>
+                </div>
+                <div class="col-xl-4 d-flex align-items-stretch">
+                  <div class="icon-box mt-4 mt-xl-0">
+                    <i class="bx bx-receipt"></i>
+                    <h4><a href="index.html">关于做好2021年第6号台风（烟花）防御工作的通知</a></h4>
+                    <p>2021-07-21</p>
+                  </div>
+                </div>
+                <div class="col-xl-4 d-flex align-items-stretch">
+                  <div class="icon-box mt-4 mt-xl-0">
+                    <i class="bx bx-receipt"></i>
+                    <h4><a href="index.html">关于“一种两端支撑、低振动高效双吸旋壳泵”等1项专利权转让的公示</a></h4>
+                    <p>2021-07-07</p>
+                  </div>
+                </div>
+              </div>
+            </div><!-- End .content-->
+          </div>
+        </div>
+
+      </div>
+    </section><!-- End Why Us Section -->
+   
+   
+  </main><!-- End #main -->
+
+  <!-- ======= Footer ======= -->
+  <footer id="footer">
+
+    <div class="container d-md-flex py-4">
+
+      <div class="me-md-auto text-center text-md-start">
+        <div class="copyright">
+          Copyright &copy;  <strong><span>Zhejiang Sci-Tech University</span></strong>. All Rights Reserved
+        </div>
+        <div class="credits">
+          <a href="https://bootstrapmade.com/">浙ICP备10006424号-1</a>
+		  地址：杭州下沙高教园区2号大街928号
+        </div>
+      </div>
+      <div class="social-links text-center text-md-right pt-3 pt-md-0">
+        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+       <!--  <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
+        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>-->
+      </div>
+    </div>
+  </footer><!-- End Footer -->
+
+  <div id="preloader"></div>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+
+  <!-- Vendor JS Files -->
+  <script src="{% static 'assets/vendor/aos/aos.js' %}"></script>
+  <script src="{% static 'assets/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+  <script src="{% static 'assets/vendor/php-email-form/validate.js' %}"></script>
+  <script src="{% static 'assets/vendor/purecounter/purecounter.js' %}"></script>
+  <script src="{% static 'assets/vendor/swiper/swiper-bundle.min.js' %}"></script>
+
+  <!-- Template Main JS File -->
+  <script src="{% static 'assets/js/main.js' %}"></script>
 
 </body>
+
 </html>
