修复公告若干bug

--- a/templates/notice/article_page.html
+++ b/templates/notice/article_page.html
@@ -9,8 +9,8 @@
 <h3>{{ article.content }}</h3>
 <br/>
 <br/>
-<a href="{% url 'edit_page' article.id %}">Edit</a>
-<a href="{% url 'delete_page' article.id %}">Delete</a>
-<a href="{% url 'notice_home'%}">Home</a>
+<a href="{% url 'edit_page' article.id %}">添加</a>
+<a href="{% url 'delete_page' article.id %}">删除</a>
+<a href="{% url 'notice_home'%}">返回</a>
 </body>
 </html>
