--- a/templates/notice/notice_home.html
+++ b/templates/notice/notice_home.html
@@ -13,6 +13,7 @@
     <td>{{ article.pub_time }}</td>
     <br/>
 {% endfor %}
+<input type="button" name="Submit" onclick="javascript:history.back(-1);" value="返回上一页">
 <br>
 </body>
 </html>
