--- a/templates/defaultAPP/index.html
+++ b/templates/defaultAPP/index.html
@@ -76,7 +76,7 @@
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
             <i class="ri-file-list-3-line" style="color: #11dbcf;"></i>
-            <h1><a href="">公告</a></h1>
+            <h1><a href="{% url "notice_home" %}">公告</a></h1>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
