--- a/templates/PageNavigation/nav.html
+++ b/templates/PageNavigation/nav.html
@@ -57,8 +57,8 @@
                 用户端
             {% endif %}
         </a>
-          <li><a href="">财务</a></li>
-          <li><a href="">办事</a></li>
+          <li><a href="{% url "finance" info.kind %}">财务</a></li>
+          <li><a href="{% url "officemanagement" kind=info.kind %}">办事</a></li>
           <li><a href="{% url "notice_home" %}">公告</a></li>
           <li><a href="{% url "logout" %}">退出</a></li>
           <li><a href="{% url 'update' info.kind %}">
@@ -92,13 +92,13 @@
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
             <i class="ri-database-2-line" style="color: #47aeff;"></i>
-            <h1><a href="">财务</a></h1>
+            <h1><a href="{% url "finance" info.kind %}">财务</a></h1>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
             <i class="ri-gradienter-line" style="color: #ffa76e;"></i>
-            <h1><a href="">办事</a></h1>
+            <h1><a href="{% url "officemanagement" info.kind %}">办事</a></h1>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
