--- a/templates/notice/article_page_generaluser.html
+++ b/templates/notice/article_page_generaluser.html
@@ -27,7 +27,7 @@
 
 <br/>
  <br/>
-  <a href="{% url 'edit_page' article.id %}" align="center"><button onClick="clickme()"  style="width:180px;height:40px;">添加</button></a>
+  <a href="{% url 'edit_page_generaluser' article.id %}" align="center"><button onClick="clickme()"  style="width:180px;height:40px;">添加</button></a>
  <br/>
  <br/>
  <br/>
