--- a/templates/PageNavigation/model.html
+++ b/templates/PageNavigation/model.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
 <link href="{% static 'css/nav.css' %}" rel="stylesheet">
+<link href="{% static 'CSS/main.css' %}" rel="stylesheet">
 </head>
 <body>
 <div class="nav">
