--- a/templates/notice/edit_page_admin.html
+++ b/templates/notice/edit_page_admin.html
@@ -23,7 +23,7 @@
     <link href="{% static 'assets/css/notice.css' %}" rel="stylesheet">
 </head>
 <body>
-<form id="tid" action="{% url 'change_generaluser' %}" method="post">
+<form id="tid" action="{% url 'change' %}" method="post">
     {% csrf_token %}
     <input type="hidden" name="article_id" value="{{ article.id | default:'0' }}">
     <p></p>
@@ -36,15 +36,15 @@
 <form action="save.php" method="post" >
     <a class="btn btn-primary " style="display:inline-block;float: left;">公告正文</a>
  <textarea type="text" name="content" value="{{ article.content }}" cols="100" rows="10"></textarea>
-    <input type="submit" value="提交"  name="submit" href="{% url 'notice_home_generaluser'%}"/>
-    <input type="reset" value="重置"  name="reset" href="{% url 'notice_home_generaluser'%}"/>
+    <input type="submit" value="提交"  name="submit" />
+    <input type="reset" value="重置"  name="reset" />
 </form>
     <br/>
     <p><p></p></p>
 
 </form>
 <br/>
-    <a href="{% url 'notice_home_generaluser'%}"> <div  style="font-size: 20px "class="box2">返回上一页</div></a>
+    <a href="{% url 'notice_home_admin'%}"> <div  style="font-size: 20px "class="box2">返回上一页</div></a>
  <!-- Vendor JS Files -->
   <script src="{% static 'assets/vendor/aos/aos.js' %}"></script>
   <script src="{% static 'assets/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
