--- a/templates/notice/notice_home_generaluser.html
+++ b/templates/notice/notice_home_generaluser.html
@@ -71,7 +71,7 @@
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
             <i class="ri-file-list-3-line" style="color: #11dbcf;"></i>
-            <h1><a href="{% url 'edit_page' 0 %}">添加公告</a></h1>
+            <h1><a href="{% url 'edit_page_generaluser' 0 %}">添加公告</a></h1>
           </div>
         </div>
  <style type="text/css">
